--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build-dev": "cross-env NODE_ENV=development webpack --config webpack.dev.js",
-    "watch": "cross-env NODE_ENV=development webpack --config webpack.dev.js --watch",
-    "build-prod": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "build-dev": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js",
+    "watch": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js --watch",
+    "build-prod": "cross-env BUILD_ENV=prod webpack --config webpack.prod.js",
     "lint": "eslint client/"
   },
   "dependencies": {
@@ -55,11 +55,11 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.9.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "^3.2.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -72,10 +72,11 @@
     "stylelint": "^9.10.1",
     "stylelint-webpack-plugin": "0.10.4",
     "svg-url-loader": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.0.1",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "^3.1.14",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.1.3"
   }
 }
