--- a/client/package.json
+++ b/client/package.json
@@ -59,9 +59,9 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.9.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
