--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "build-dev": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js",
     "watch": "cross-env BUILD_ENV=dev webpack --config webpack.dev.js --watch",
     "build-prod": "cross-env BUILD_ENV=prod webpack --config webpack.prod.js",
-    "lint": "eslint src/;exit 0"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@nivo/line": "^0.49.1",
@@ -38,30 +38,33 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.6.3",
-    "babel-core": "6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "6.26.0",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/runtime": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^7.0.2",
     "css-loader": "^2.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "path": "^0.12.7",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
