--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/runtime": "^7.9.6",
-    "autoprefixer": "^8.6.3",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -64,12 +64,12 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "path": "^0.12.7",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.5",
-    "postcss-mixins": "^6.2.0",
-    "postcss-preset-env": "^5.1.0",
-    "postcss-svg": "^2.4.0",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-mixins": "^6.2.3",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-svg": "^3.0.0",
     "style-loader": "^0.21.0",
     "stylelint": "^9.10.1",
     "stylelint-webpack-plugin": "0.10.4",
@@ -78,6 +78,12 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.1.3"
-  }
+    "webpack-merge": "^4.2.2"
+  },
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
+  ]
 }
